# qryptext

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build.bat  build.sh  codecov.yml  doxyfile  test.bat  test.sh
.circleci/: config.yml
csharp/: .gitignore  Program.cs  QryptextSharp.cs  QryptextSharp.csproj
csharp/lib/x64/linux/: libqryptext.so.0.4.1  libqryptext.so.1.0.0  libqryptext.so.1.0.1
csharp/lib/x64/mac/: libqryptext.0.4.1.dylib  libqryptext.1.0.0.dylib  libqryptext.1.0.1.dylib
docs/: annotated.html  classes.html  constants_8h.html  constants_8h__dep__incl.md5  constants_8h_source.html  decrypt_8h.html  decrypt_8h__incl.md5  decrypt_8h_source.html  dir_24f8adb4cdeabf45533f75be877b3291.html  dir_d44c64559bbebec7f509842c48db8b23.html  encrypt_8h.html  encrypt_8h__incl.md5  encrypt_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  guid_8h.html  guid_8h__incl.md5  guid_8h_source.html  index.html  keygen_8h.html  keygen_8h__incl.md5  keygen_8h_source.html  sign_8h.html  sign_8h__incl.md5  sign_8h_source.html  structqryptext__falcon1024__keypair-members.html  structqryptext__falcon1024__keypair.html  structqryptext__falcon1024__keypair__coll__graph.md5  structqryptext__falcon1024__public__key-members.html  structqryptext__falcon1024__public__key.html  structqryptext__falcon1024__secret__key-members.html  structqryptext__falcon1024__secret__key.html  structqryptext__guid-members.html  structqryptext__guid.html  (+17 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_0.js
examples/: CMakeLists.txt  example01.c  example02.c  example03.c  example04.c  example05.c  example06.c
include/qryptext/: constants.h  decrypt.h  encrypt.h  guid.h  keygen.h  sign.h  types.h  util.h  verify.h
programs/: CMakeLists.txt  qryptext_decrypt.c  qryptext_encrypt.c  qryptext_falcon1024_keygen.c  qryptext_kyber1024_keygen.c  qryptext_sign.c  qryptext_verify.c
src/: decrypt.c  encrypt.c  guid.c  keygen.c  sign.c  util.c  verify.c
tests/: tests.c
